--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,65 @@
-.App {
+.app {
   text-align: center;
+  font-family: Arial, sans-serif;
+  padding: 10px 20px;
+  background: linear-gradient(rgb(226, 140, 140), rgb(126, 126, 211));
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  font-size: 3rem;
+  color: #ed3818; 
+  text-shadow: 4px 4px 5px rgba(0, 0, 0, 0.3);
+  margin-bottom: 30px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.search-box {
+  width: 80%;
+  max-width: 500px;
+  padding: 15px;
+  margin: 20px auto;
+  border: 2px solid #ff6347; 
+  border-radius: 30px;
+  outline: none;
+  font-size: 1.2rem;
+  transition: 0.3s;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+.search-box:focus {
+  border-color: #ff4500; 
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.pokemon-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.pokemon-card {
+  width: 150px;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  padding: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  background-color: #f9f9f9;
+  border: 1px solid red;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.pokemon-card img {
+  width: 100px;
+  height: 100px;
+}
+
+.pokemon-card h3 {
+  text-transform: capitalize;
+  font-size: 18px;
+  margin: 10px 0 0;
+}
+
+.pokemon-card:hover {
+  transform: translateY(-5px); 
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  background-color: greenyellow;
 }
